[gd_scene load_steps=10 format=3 uid="uid://dncsj4toady3j"]

[ext_resource type="Script" uid="uid://qi4rqwcfu6gt" path="res://scripts/movement_controller.gd" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://ortke7n4q4s6" path="res://scripts/set_clown_model.gd" id="2_5uy6h"]
[ext_resource type="PackedScene" uid="uid://begv0wikfruaa" path="res://Art/ClownEnemyTall.glb" id="3_c4w8v"]
[ext_resource type="PackedScene" uid="uid://msjnlecguhq7" path="res://scenes/vision_cone.tscn" id="4_c4w8v"]
[ext_resource type="PackedScene" uid="uid://cdfigalyk4e06" path="res://Art/CLOWNSHORTMaterial.glb" id="4_xwavj"]
[ext_resource type="Material" uid="uid://bpitvwy06woqd" path="res://resources/translucent_vision_cone_1.tres" id="5_xwavj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_md0e3"]

[sub_resource type="CylinderMesh" id="CylinderMesh_nenq2"]
resource_local_to_scene = true
material = ExtResource("5_xwavj")
top_radius = 0.0
bottom_radius = 2.0
height = 5.0

[sub_resource type="CylinderMesh" id="CylinderMesh_md484"]
resource_local_to_scene = true
material = ExtResource("5_xwavj")
top_radius = 0.0
bottom_radius = 2.0
height = 5.0

[node name="Enemy" type="Node3D"]
script = ExtResource("1_7p1mj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
visible = false
shape = SubResource("CapsuleShape3D_md0e3")

[node name="Node3D" type="Node3D" parent="."]
script = ExtResource("2_5uy6h")

[node name="Clown1" type="Node3D" parent="Node3D"]

[node name="ClownEnemyTall" parent="Node3D/Clown1" instance=ExtResource("3_c4w8v")]
transform = Transform3D(-0.25, 0, -2.1855694e-08, 0, 0.25, 0, 2.1855694e-08, 0, -0.25, 0, -1, 0)

[node name="Skeleton3D" parent="Node3D/Clown1/ClownEnemyTall/rig" index="0"]
bones/2/position = Vector3(0, 0.058349013, 1.5845163)
bones/3/position = Vector3(0, 1.3469657, 0)
bones/8/rotation = Quaternion(0.0041940995, -0.0012137912, -0.048587613, 0.9988094)
bones/8/scale = Vector3(0.99999976, 1, 0.9999998)
bones/9/rotation = Quaternion(-5.285832e-08, -2.1586876e-08, 0.39595827, 0.9182685)
bones/14/position = Vector3(-0.014692755, 0.6792661, 0.009044894)
bones/14/rotation = Quaternion(0.6670041, 0.67996216, -0.20415011, 0.22600834)
bones/15/rotation = Quaternion(-0.106969446, -0.2682565, -0.13058665, 0.94844246)
bones/16/rotation = Quaternion(0.6670042, 0.67996216, -0.20414999, -0.22600795)
bones/17/rotation = Quaternion(-0.53241956, -0.35048977, 0.6022529, -0.48060158)
bones/24/rotation = Quaternion(0.0041940743, -0.0012137912, -0.04858758, 0.9988094)
bones/24/scale = Vector3(0.9999998, 1, 0.9999998)
bones/26/rotation = Quaternion(-0.033311497, -0.17192054, 0.005816717, 0.98453027)
bones/26/scale = Vector3(0.33163053, 9.092661, 0.3316304)
bones/27/rotation = Quaternion(-5.2443834e-08, -5.487538e-08, 0.3959582, 0.91826856)
bones/27/scale = Vector3(1.0000001, 0.99999994, 1.0000001)
bones/28/rotation = Quaternion(0.004253131, 9.541402e-08, -0.048582442, 0.9988101)
bones/28/scale = Vector3(0.99999994, 1.0000001, 1)
bones/29/rotation = Quaternion(0.0041940804, -0.001213782, -0.048587568, 0.9988094)
bones/30/rotation = Quaternion(-6.311135e-08, -1.1131553e-08, 0.39595827, 0.9182685)
bones/33/rotation = Quaternion(0.004193888, 0.0012134686, 0.048587672, 0.9988094)
bones/33/scale = Vector3(1, 0.9999998, 1.0000004)
bones/34/rotation = Quaternion(8.6485336e-08, -1.6292671e-07, -0.3959585, 0.9182685)
bones/35/rotation = Quaternion(0.00419385, 0.0012134456, 0.04858768, 0.9988094)
bones/36/rotation = Quaternion(6.550333e-08, -1.502617e-07, -0.39595836, 0.91826856)
bones/41/position = Vector3(0.014693309, 0.6792659, 0.00904527)
bones/41/rotation = Quaternion(-0.66700387, 0.67996234, -0.20415033, -0.22600825)
bones/42/rotation = Quaternion(-0.10696936, 0.2682564, 0.13058631, 0.94844264)
bones/51/rotation = Quaternion(0.004193934, 0.0012134782, 0.048587643, 0.9988094)
bones/51/scale = Vector3(1, 0.9999998, 1.0000002)
bones/53/rotation = Quaternion(-0.03331148, 0.17190225, -0.0058173947, 0.9845335)
bones/53/scale = Vector3(0.33163065, 9.092661, 0.3316306)
bones/54/rotation = Quaternion(7.6663966e-08, -1.8728332e-07, -0.3959585, 0.9182685)
bones/54/scale = Vector3(1.0000005, 1.0000002, 1)
bones/55/rotation = Quaternion(0.004252964, -2.5904125e-08, 0.048582505, 0.9988101)
bones/65/rotation = Quaternion(-0.015678665, 0.7302169, 0.6828296, -0.016766736)
bones/72/rotation = Quaternion(0.570426, -0.43731695, -0.4230978, -0.55168504)
bones/73/rotation = Quaternion(0.056009486, 0.101955175, 0.25913197, 0.9588111)
bones/74/rotation = Quaternion(-7.925355e-09, -9.1751204e-08, 0.002330683, 0.99999726)
bones/76/rotation = Quaternion(-0.4137094, 0.040304802, -0.058925282, 0.9076056)
bones/79/rotation = Quaternion(-0.5190309, -0.1765546, 0.049043633, 0.83488333)
bones/81/rotation = Quaternion(0.55748785, 0.42873278, 0.6752415, -0.2223614)
bones/81/scale = Vector3(0.28159428, 12.611084, 0.28159428)
bones/83/rotation = Quaternion(0.06595489, 0.09957781, 0.24289155, 0.9626723)
bones/84/rotation = Quaternion(-8.455893e-09, -9.126316e-08, 0.002330683, 0.99999726)
bones/85/rotation = Quaternion(-0.519488, -0.025433026, -0.04394002, 0.8529682)
bones/88/rotation = Quaternion(0.48243198, 0.53279334, 0.5155965, -0.4664236)
bones/89/rotation = Quaternion(0.083468094, -0.08112165, -0.00789046, 0.9931718)
bones/90/rotation = Quaternion(-3.7813357e-09, 5.4748195e-10, -0.0023175403, 0.9999974)
bones/91/rotation = Quaternion(-0.54221374, 0.08019744, 0.10208433, 0.8301515)
bones/92/rotation = Quaternion(-0.5267345, -0.47173503, 0.5267524, -0.47175077)
bones/93/rotation = Quaternion(-0.609494, 0.3491122, 0.69204235, 0.16647874)
bones/93/scale = Vector3(0.26673496, 14.055302, 0.26673496)
bones/95/rotation = Quaternion(-0.422706, -0.035793558, 0.122035526, 0.89729923)
bones/96/rotation = Quaternion(0.006047668, 0.9939202, 0.052541424, -0.096568525)
bones/99/rotation = Quaternion(0.09311912, -0.08037001, 0.009105533, 0.99236417)
bones/100/rotation = Quaternion(-3.7849466e-09, 6.8914874e-10, -0.0023175403, 0.9999974)
bones/101/rotation = Quaternion(-0.5380526, 0.049339198, 0.12213304, 0.8325555)
bones/104/position = Vector3(0.94289756, 0.8844527, 0.08370578)
bones/104/rotation = Quaternion(0.66643333, 0.07608079, 0.7079863, -0.22098391)
bones/106/rotation = Quaternion(1.05753575e-08, -3.342095e-08, -0.11411693, 0.99346733)
bones/110/position = Vector3(0.09391034, 0.80435413, -1.8975753e-07)
bones/110/rotation = Quaternion(-0.018114926, 0.017655643, 0.7159033, 0.69774115)
bones/112/position = Vector3(-0.9221013, 0.87619454, -0.17091225)
bones/112/rotation = Quaternion(-0.66643333, 0.07608093, 0.7079863, 0.22098382)
bones/113/rotation = Quaternion(-2.8797515e-08, -4.4203787e-08, 0.42294535, 0.9061553)
bones/118/position = Vector3(-0.31746498, 0.6669646, 5.204178e-07)
bones/118/rotation = Quaternion(-0.01395557, -0.021097796, -0.55151594, 0.83378077)
bones/121/position = Vector3(-5.2441694e-16, -0.008917607, 6.4242597)
bones/121/rotation = Quaternion(-3.0908623e-08, 0.7071068, 0.7071068, -3.0908623e-08)
bones/124/position = Vector3(-0.68384916, 0.3139117, 1.2126315)
bones/124/rotation = Quaternion(-0.5061394, -0.38299865, 0.67217225, 0.381208)
bones/124/scale = Vector3(0.99999994, 0.9999999, 1)
bones/125/rotation = Quaternion(3.5623522e-08, 0.0036798536, 1.6305975e-08, 0.99999326)
bones/126/position = Vector3(0.683849, 0.31391168, 1.2126316)
bones/126/rotation = Quaternion(0.5061395, -0.3829981, 0.67217237, -0.38120797)
bones/126/scale = Vector3(0.99999994, 0.9999997, 1)
bones/127/rotation = Quaternion(-1.9400243e-08, -0.003679723, -2.2811298e-08, 0.9999932)
bones/128/position = Vector3(-0.60459113, 0.18613037, 1.5245161)
bones/128/rotation = Quaternion(-0.31312042, -0.5521056, 0.46629214, 0.6162034)
bones/128/scale = Vector3(0.99999994, 1, 0.9999999)
bones/129/position = Vector3(0.604591, 0.18613039, 1.5245161)
bones/129/rotation = Quaternion(-0.31312048, 0.5521056, -0.4662922, 0.6162034)
bones/129/scale = Vector3(0.9999999, 0.99999976, 1.0000001)
bones/130/position = Vector3(-1.1090248, -0.09100223, 5.428302)
bones/130/rotation = Quaternion(-0.4554369, -0.30513284, 0.6323458, 0.54736656)
bones/131/position = Vector3(1.0882283, -0.34575394, 5.4280076)
bones/131/rotation = Quaternion(-0.45543674, 0.3051331, -0.63234556, 0.54736674)
bones/132/position = Vector3(-1.2751517, -0.17703742, 5.0736523)
bones/132/rotation = Quaternion(-0.41764084, -0.35511234, 0.5657511, 0.61595225)
bones/134/position = Vector3(1.2543554, -0.43178898, 5.0733576)
bones/134/rotation = Quaternion(-0.28364196, 0.4691225, -0.34149697, 0.7634469)
bones/136/position = Vector3(-1.2751515, -0.17703746, 5.073652)
bones/136/rotation = Quaternion(-0.41764084, -0.35511234, 0.5657511, 0.61595225)
bones/184/position = Vector3(1.2543553, -0.431789, 5.073357)
bones/184/rotation = Quaternion(-0.28364202, 0.4691225, -0.34149715, 0.7634468)
bones/236/position = Vector3(1.8654265, 5.7679486, -0.84036154)
bones/237/position = Vector3(-1.8654267, 5.767948, -0.8403616)
bones/238/position = Vector3(-0.77422833, 0.56016266, 0.012594308)
bones/238/rotation = Quaternion(-0.076887146, 0.7029136, 0.7029142, 0.07689309)
bones/240/position = Vector3(-2.4081254e-08, 1.7313627e-07, 6.6211464e-07)
bones/240/rotation = Quaternion(-0.13772543, -0.54059404, 0.090247005, 0.8250123)
bones/241/rotation = Quaternion(0.016700009, -0.48096526, 0.16797677, 0.86033565)
bones/242/position = Vector3(1.4905287e-07, 4.7683716e-07, -8.9360434e-08)
bones/242/rotation = Quaternion(8.028921e-08, 0.70710737, 3.1480508e-07, 0.7071063)
bones/243/rotation = Quaternion(-2.8123958e-07, 3.9300357e-07, -9.692345e-08, 1)
bones/251/rotation = Quaternion(0.5327155, -1.0160641e-07, 0.8462944, -4.2712628e-08)
bones/254/rotation = Quaternion(0.40949193, -1.5260715e-09, 0.91231376, -3.399251e-09)
bones/255/rotation = Quaternion(5.424954e-07, -6.8007513e-15, 1, -3.725285e-09)
bones/256/position = Vector3(-0.7632841, 1.2296004, 0.93829876)
bones/256/rotation = Quaternion(-1.9509959e-13, -0.7798041, -1.2017792e-13, 0.6260236)
bones/257/position = Vector3(0.7742284, 0.56016266, 0.012594293)
bones/257/rotation = Quaternion(0.07688257, 0.70291305, 0.7029147, -0.07689766)
bones/259/position = Vector3(2.3290926e-07, 6.4121804e-07, -5.1292453e-08)
bones/259/rotation = Quaternion(-0.1377247, 0.54058874, -0.09024761, 0.82501584)
bones/260/rotation = Quaternion(-0.01670016, -0.4809648, 0.16797738, -0.8603357)
bones/261/position = Vector3(1.19198944e-07, -5.215407e-07, 1.3414625e-07)
bones/261/rotation = Quaternion(9.61459e-08, -0.70710707, 6.9839935e-08, 0.7071066)
bones/262/rotation = Quaternion(-2.8128093e-07, -4.023459e-07, 1.0424955e-07, 1)
bones/271/rotation = Quaternion(-0.53271544, -4.7070266e-08, 0.8462944, -9.3642456e-08)
bones/273/rotation = Quaternion(0.91231114, 2.9420746e-09, 0.40949768, -2.540909e-09)
bones/274/rotation = Quaternion(1, 1.3918696e-09, 3.1245875e-07, -1.2381371e-09)
bones/275/position = Vector3(0.76328415, 1.2296004, 0.93829876)
bones/275/rotation = Quaternion(-6.3805694e-13, 0.779804, 6.5801867e-13, 0.62602377)
bones/277/rotation = Quaternion(0.41703945, 0.5856955, 0.5832366, -0.37798697)
bones/281/rotation = Quaternion(-0.53241915, -0.35048988, 0.60225296, -0.48060188)
bones/282/rotation = Quaternion(-0.53241915, -0.35048988, 0.60225314, -0.4806017)
bones/283/rotation = Quaternion(-0.53241926, -0.35049024, 0.60225284, -0.4806015)
bones/291/rotation = Quaternion(-0.6670038, 0.67996234, -0.20415057, -0.22600827)
bones/292/rotation = Quaternion(-0.13058653, 0.9484427, -0.10696916, -0.2682559)
bones/298/rotation = Quaternion(0.50822866, -0.5082286, -0.49163362, -0.49163368)
bones/321/rotation = Quaternion(0.50822866, 0.5082286, 0.49163362, -0.49163368)

[node name="c_head_x" parent="Node3D/Clown1/ClownEnemyTall/rig/Skeleton3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.441868e-16, 6.4242597, -0.008917607)

[node name="VisionCone" parent="Node3D/Clown1" instance=ExtResource("4_c4w8v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.815, 0)

[node name="ConeMesh" parent="Node3D/Clown1/VisionCone" index="0"]
mesh = SubResource("CylinderMesh_nenq2")
skeleton = NodePath("../../../..")

[node name="Clown2" type="Node3D" parent="Node3D"]
visible = false

[node name="CLOWNSHORTMaterial" parent="Node3D/Clown2" instance=ExtResource("4_xwavj")]
transform = Transform3D(-0.25, 0, -2.1855694e-08, 0, 0.25, 0, 2.1855694e-08, 0, -0.25, 0, -1, 0)

[node name="Skeleton3D" parent="Node3D/Clown2/CLOWNSHORTMaterial/rig" index="0"]
bones/8/rotation = Quaternion(2.0465814e-07, -7.776545e-08, -1.4249224e-07, 1)
bones/8/scale = Vector3(1.0000005, 1.0000005, 0.99999994)
bones/9/rotation = Quaternion(-4.337747e-09, -1.0823246e-08, 0.18669282, 0.98241836)
bones/14/position = Vector3(8.2872866e-08, 0.73342645, 8.31139e-07)
bones/14/rotation = Quaternion(0.6315842, 0.6669979, -0.26642618, 0.2919456)
bones/14/scale = Vector3(0.9999881, 0.9999998, 1)
bones/15/rotation = Quaternion(-0.12412999, -0.21738327, -0.09696561, 0.9632934)
bones/16/position = Vector3(-0.21364874, 0.15744281, 0.2286487)
bones/16/rotation = Quaternion(0.6315842, 0.66699827, -0.26642576, -0.29194525)
bones/17/rotation = Quaternion(-0.53314817, -0.396551, 0.5764688, -0.475588)
bones/24/rotation = Quaternion(1.7788258e-07, -8.73115e-08, -1.3946544e-07, 1)
bones/24/scale = Vector3(1.0000005, 1.0000006, 0.9999999)
bones/26/rotation = Quaternion(-0.002556291, -0.5651449, 0.0017511161, 0.82498586)
bones/26/scale = Vector3(0.31622797, 9.999992, 0.3162279)
bones/27/rotation = Quaternion(2.8285498e-08, -2.7849488e-08, 0.18669282, 0.98241836)
bones/27/scale = Vector3(0.99999964, 0.99999964, 1.0000001)
bones/28/rotation = Quaternion(1.4541375e-07, -0.14112023, -1.5793803e-07, 0.9899925)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(1.9418076e-07, -1.1292287e-07, -1.1152579e-07, 1)
bones/30/rotation = Quaternion(-4.6441473e-09, -1.4199437e-08, 0.18669282, 0.98241836)
bones/33/rotation = Quaternion(-1.2433154e-07, -1.3131643e-07, 2.1886083e-07, 1)
bones/33/scale = Vector3(1, 1.0000004, 1)
bones/34/rotation = Quaternion(2.4489378e-08, -1.09736655e-08, -0.18669283, 0.98241836)
bones/35/rotation = Quaternion(-9.546052e-08, -1.2153751e-07, 2.0791781e-07, 1)
bones/36/rotation = Quaternion(3.1543905e-08, -3.7823558e-09, -0.18669285, 0.98241836)
bones/41/position = Vector3(-3.0904548e-07, 0.7334259, 4.3602753e-07)
bones/41/rotation = Quaternion(-0.63158417, 0.66699815, -0.26642597, -0.29194564)
bones/41/scale = Vector3(0.999988, 1, 1)
bones/42/rotation = Quaternion(-0.12412955, 0.21738343, 0.09696562, 0.9632933)
bones/43/position = Vector3(0.21364889, 0.15744308, 0.2286486)
bones/51/rotation = Quaternion(-1.3248061e-07, -1.2316735e-07, 2.2794123e-07, 1)
bones/51/scale = Vector3(0.99999994, 1.0000005, 1)
bones/53/rotation = Quaternion(-0.002556257, 0.56514484, -0.001751352, 0.8249859)
bones/53/scale = Vector3(0.31622785, 9.999992, 0.31622785)
bones/54/rotation = Quaternion(1.3487194e-08, -6.512909e-09, -0.18669279, 0.98241836)
bones/54/scale = Vector3(1.0000001, 0.99999964, 0.99999994)
bones/55/rotation = Quaternion(-1.23633e-07, 2.0582236e-07, 2.28174e-07, 1)
bones/55/scale = Vector3(1, 1, 0.99999994)
bones/65/rotation = Quaternion(-0.015306552, 0.745041, 0.6666236, -0.01710712)
bones/72/rotation = Quaternion(-0.54706985, 0.54707, 0.44801182, 0.44801173)
bones/73/rotation = Quaternion(-0.09996252, 0.3578631, -0.019520255, 0.9282028)
bones/74/rotation = Quaternion(-7.885829e-09, 1.5497132e-07, 0.1427953, 0.98975223)
bones/76/rotation = Quaternion(-0.3615301, 0.3467786, -0.13271953, 0.8552346)
bones/79/rotation = Quaternion(-0.46001214, 0.3207724, -0.16071454, 0.81219745)
bones/81/rotation = Quaternion(0.6121876, 0.30580616, 0.5517813, -0.4767036)
bones/81/scale = Vector3(0.33738273, 8.785261, 0.33738267)
bones/83/rotation = Quaternion(2.0070001e-07, -7.4505806e-07, 3.8044533e-07, 1)
bones/84/rotation = Quaternion(-9.33829e-09, 1.5093897e-07, 0.14279531, 0.98975223)
bones/85/rotation = Quaternion(-0.47244668, 0.24751961, -0.11930819, 0.83743274)
bones/88/rotation = Quaternion(0.54706997, 0.5470698, 0.4480117, -0.44801185)
bones/89/rotation = Quaternion(-0.09996266, -0.3578631, 0.019520601, 0.9282028)
bones/90/rotation = Quaternion(7.122453e-09, -5.995545e-08, -0.14279597, 0.98975223)
bones/91/rotation = Quaternion(-0.4600121, -0.32077253, 0.16071464, 0.8121975)
bones/93/rotation = Quaternion(-0.61218786, 0.3058061, 0.55178124, 0.47670346)
bones/93/scale = Vector3(0.33738267, 8.785255, 0.33738273)
bones/95/rotation = Quaternion(-0.36153007, -0.3467787, 0.13271959, 0.8552345)
bones/96/rotation = Quaternion(0.014133437, 0.9429182, 0.016203787, -0.3323296)
bones/99/rotation = Quaternion(1.9464642e-07, 8.577481e-07, -1.7695152e-08, 1)
bones/100/rotation = Quaternion(8.222901e-10, -6.304454e-08, -0.14279598, 0.98975223)
bones/101/rotation = Quaternion(-0.47244662, -0.24751958, 0.11930817, 0.8374329)
bones/104/position = Vector3(0.97989017, 0.5329088, -0.0017558)
bones/104/rotation = Quaternion(0.8820516, 0.2940258, 0.36804575, -0.008732371)
bones/112/position = Vector3(-0.9798901, 0.5329089, -0.0017558939)
bones/112/rotation = Quaternion(0.8820516, -0.29402566, -0.36804587, -0.008732263)
bones/121/position = Vector3(1.0020766e-15, -0.059863053, 5.0390215)
bones/124/position = Vector3(-0.75903296, 0.24714264, 1.1618218)
bones/124/rotation = Quaternion(-0.50366366, -0.4333712, 0.608765, 0.43349457)
bones/124/scale = Vector3(0.99999994, 0.9999997, 0.99999976)
bones/125/rotation = Quaternion(-2.374873e-08, 5.7741982e-08, 4.8428763e-08, 1)
bones/126/position = Vector3(0.7590329, 0.24714275, 1.1618221)
bones/126/rotation = Quaternion(0.5036639, -0.43337125, 0.60876477, -0.43349457)
bones/126/scale = Vector3(0.9999999, 0.99999946, 0.99999976)
bones/127/rotation = Quaternion(2.0023439e-08, 2.4260956e-07, 2.2118911e-08, 1)
bones/128/position = Vector3(-0.71515006, 0.20505041, 1.4999479)
bones/128/rotation = Quaternion(-0.41390127, -0.51978225, 0.51713157, 0.539525)
bones/129/position = Vector3(0.71515, 0.20505035, 1.4999479)
bones/129/rotation = Quaternion(-0.41390124, 0.5197823, -0.5171315, 0.53952503)
bones/129/scale = Vector3(1, 1.0000004, 1)
bones/130/position = Vector3(-1.1829331, -0.05192109, 4.2741947)
bones/130/rotation = Quaternion(-0.09801304, -0.5527601, 0.6874208, 0.46076292)
bones/131/position = Vector3(1.1829331, -0.051921062, 4.2741947)
bones/131/rotation = Quaternion(-0.09801333, 0.5527601, -0.6874208, 0.4607628)
bones/132/position = Vector3(-1.3859758, -0.038120158, 3.945426)
bones/132/rotation = Quaternion(-0.018076915, -0.5610916, 0.614581, 0.55420184)
bones/134/position = Vector3(1.3859755, -0.038120203, 3.9454262)
bones/134/rotation = Quaternion(-0.018077072, 0.5610917, -0.6145811, 0.55420166)
bones/136/position = Vector3(-1.385976, -0.038120046, 3.945426)
bones/136/rotation = Quaternion(-0.018077012, -0.5610916, 0.614581, 0.5542019)
bones/184/position = Vector3(1.3859758, -0.038120314, 3.9454262)
bones/184/rotation = Quaternion(-0.018077072, 0.5610918, -0.614581, 0.55420166)
bones/236/position = Vector3(1.7644546, 3.9199188, -0.6017362)
bones/237/position = Vector3(-1.7644546, 3.9199185, -0.6017362)
bones/238/position = Vector3(-0.8259543, 0.45456967, 0.06485407)
bones/238/rotation = Quaternion(-0.050165452, 0.7053247, 0.705325, 0.0501707)
bones/240/position = Vector3(3.3973316e-07, 2.3357286e-07, -1.471042e-07)
bones/240/rotation = Quaternion(-0.13412896, -0.42349592, 0.06356421, 0.89365554)
bones/241/rotation = Quaternion(-0.019208461, -0.5274372, 0.1563387, 0.83486485)
bones/242/position = Vector3(1.0434081e-07, -1.0430813e-07, -1.0434841e-07)
bones/242/rotation = Quaternion(-3.5432876e-07, 0.70710766, -1.5009766e-07, 0.70710593)
bones/243/rotation = Quaternion(1.1342985e-06, -2.1681192e-06, 3.1870164e-07, 1)
bones/251/rotation = Quaternion(0.4185718, 3.6758067e-08, 0.90818375, -4.285444e-08)
bones/254/rotation = Quaternion(0.49982986, -6.066218e-08, 0.8661236, -1.4371249e-10)
bones/255/rotation = Quaternion(-2.6267955e-06, -1.4691971e-09, 1, -2.5432119e-09)
bones/256/position = Vector3(-0.82665086, 1.1209834, 0.92968583)
bones/256/rotation = Quaternion(0, -0.7554926, 0, 0.65515715)
bones/257/position = Vector3(0.8259543, 0.45456967, 0.06485406)
bones/257/rotation = Quaternion(0.050160874, 0.7053244, 0.7053253, -0.050175287)
bones/259/position = Vector3(-7.406107e-07, 1.263052e-07, -4.2871505e-07)
bones/259/rotation = Quaternion(-0.1341282, 0.42349, -0.06356513, 0.8936584)
bones/260/rotation = Quaternion(-0.019208884, 0.52743703, -0.15633911, 0.83486485)
bones/261/position = Vector3(1.7884018e-07, -2.6822087e-07, -1.4964137e-08)
bones/261/rotation = Quaternion(2.0608852e-07, 0.7071075, -2.707086e-07, -0.7071061)
bones/262/rotation = Quaternion(1.0673493e-06, 2.1066517e-06, -2.9410594e-07, 1)
bones/273/rotation = Quaternion(0.86612034, 1.0284584e-07, 0.49983558, -1.8384485e-09)
bones/275/position = Vector3(0.8266509, 1.1209834, 0.9296859)
bones/277/rotation = Quaternion(0.43246698, 0.5861073, 0.5836603, -0.3588749)
bones/281/rotation = Quaternion(-0.53314775, -0.39655137, 0.57646924, -0.47558776)
bones/282/rotation = Quaternion(-0.5331473, -0.3965508, 0.5764696, -0.47558838)
bones/283/rotation = Quaternion(-0.5331485, -0.39655194, 0.5764685, -0.47558734)
bones/292/rotation = Quaternion(-0.09696517, 0.9632921, -0.124130994, -0.21738814)
bones/321/rotation = Quaternion(0.54706997, 0.5470698, 0.4480117, -0.44801185)

[node name="c_head_x" parent="Node3D/Clown2/CLOWNSHORTMaterial/rig/Skeleton3D" index="0"]
transform = Transform3D(1, -3.011836e-39, 3.5527137e-14, 3.01184e-39, 1, -6.8902824e-32, -3.5527137e-14, 6.8902824e-32, 1, -1.1599676e-15, 5.0390215, -0.059863053)

[node name="VisionCone" parent="Node3D/Clown2" instance=ExtResource("4_c4w8v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.395, 0)

[node name="ConeMesh" parent="Node3D/Clown2/VisionCone" index="0"]
mesh = SubResource("CylinderMesh_md484")

[editable path="Node3D/Clown1/ClownEnemyTall"]
[editable path="Node3D/Clown1/VisionCone"]
[editable path="Node3D/Clown2/CLOWNSHORTMaterial"]
[editable path="Node3D/Clown2/VisionCone"]
